--- a/index.html
+++ b/index.html
@@ -166,11 +166,23 @@
                         <i class="fas fa-briefcase"></i>
                     </div>
                     <p class="tl-duration">2022 - Now</p>
-                    <h5>Freelance Programmer<span> - RitterCoding</span></h5>
+                    <h5>Web Programmer<span> - RitterCoding</span></h5>
                     <p>
-                        Engaging in freelance programming activities as an integral member of the RitterCoding team while also actively pursuing external project opportunities.
+                        I work as staff at RitterCoding, where I undertake various responsibilities within my role. While I work remotely from home, I actively contribute to team projects and collaborate effectively with colleagues.
                         <br>
                         <a style="color: rgb(121, 121, 250);" target="_blank" href="https://rittercoding.com">Visit Website</a>
+                    </p>
+                </div>
+                <div class="timeline-item">
+                    <div class="tl-icon">
+                        <i class="fas fa-graduation-cap"></i>
+                    </div>
+                    <p class="tl-duration">2023 - Now</p>
+                    <h5>Diploma 3<span> - University Catur Insan Cendikia</span></h5>
+                    <p>
+                        I am a student at Universitas Catur Insan Cendikia, studying Management Informatics, and working remotely. I focus on IT and management, including programming and project management. My education and remote work experience prepare me for a dynamic professional world.
+                        <br>
+                        <a style="color: rgb(121, 121, 250);" target="_blank" href="https://www.cic.ac.id">Visit Website</a>
                     </p>
                 </div>
             </div>
@@ -199,7 +211,7 @@
                         <img src="img/ais.png" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>Afkaaruna School</h3>
+                        <h3><a href="https://afkaaruna.sch.id">Afkaaruna School</a></h3>
                         <div style="padding: 0 10px;">
                             Designed and developed a school website along with an integrated online admissions system using the <span style="font-weight: bold;">Laravel framework</span>.
                         </div>
@@ -210,7 +222,7 @@
                         <img src="img/si.png" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>Sekolah Iklan</h3>
+                        <h3><a href="https://sekolahiklan.com">Sekolah Iklan</a></h3>
                         <div style="padding: 0 10px;">
                             Developing the backend infrastructure for a school advertising application, designed to provide assistance and support in effective advertising.    
                         </div>
@@ -221,7 +233,7 @@
                         <img src="img/hris.png" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>Project Source</h3>
+                        <h3>HRIS</h3>
                         <div style="padding: 0 10px;">
                             Architecting the backend infrastructure for a sophisticated Human Resource Information System (HRIS) application, custom-tailored for a company's needs, and utilizing Node.js.     
                         </div>
@@ -235,6 +247,28 @@
                         <h3>Judge Justice</h3>
                         <div style="padding: 0 10px;">
                             Developing the backend infrastructure for an application dedicated to legal services, including the rental of lawyers and attorneys, with a focus on legal matters.
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="img/r99.png" alt="">
+                    </div>
+                    <div class="hover-items">
+                        <h3 class="text-primary"><a href="https://rattansangasanga.com">Rattan Sanga Sanga</a></h3>
+                        <div style="padding: 0 10px;">
+                            Rattan Sanga Sanga is a website for a rattan company aiming to showcase its various rattan products. It provides detailed product information, product galleries, an online catalog, and responsive customer service to facilitate customer information and purchases.
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <div class="image">
+                        <img src="img/saujana.png" alt="">
+                    </div>
+                    <div class="hover-items">
+                        <h3 class="text-primary"><a href="https://saujana.id">Saujana</a></h3>
+                        <div style="padding: 0 10px;">
+                            Saujana is a promotional website dedicated to photography. It features portfolios of photographers showcasing various types of photography, including portraits, landscapes, and event documentation.
                         </div>
                     </div>
                 </div>
