--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             </p>
             <div class="portfolios">
                 <div class="portfolio-item">
-                    <div class="image">
+                    <div class="image w-100">
                         <img src="img/bwe.png" alt="">
                     </div>
                     <div class="hover-items">
@@ -207,29 +207,33 @@
                     </div>
                 </div>
                 <div class="portfolio-item">
-                    <div class="image">
+                    <div class="image w-100">
                         <img src="img/ais.png" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3><a href="https://afkaaruna.sch.id">Afkaaruna School</a></h3>
+                        <h3>Afkaaruna School</h3>
                         <div style="padding: 0 10px;">
                             Designed and developed a school website along with an integrated online admissions system using the <span style="font-weight: bold;">Laravel framework</span>.
+                            <br>
+                            https://afkaaruna.sch.id
                         </div>
                     </div>
                 </div>
                 <div class="portfolio-item">
-                    <div class="image">
+                    <div class="image w-100">
                         <img src="img/si.png" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3><a href="https://sekolahiklan.com">Sekolah Iklan</a></h3>
+                        <h3>Sekolah Iklan</h3>
                         <div style="padding: 0 10px;">
                             Developing the backend infrastructure for a school advertising application, designed to provide assistance and support in effective advertising.    
+                            <br>
+                            https://sekolahiklan.com
                         </div>
                     </div>
                 </div>
                 <div class="portfolio-item">
-                    <div class="image">
+                    <div class="image w-100">
                         <img src="img/hris.png" alt="">
                     </div>
                     <div class="hover-items">
@@ -240,7 +244,7 @@
                     </div>
                 </div>
                 <div class="portfolio-item">
-                    <div class="image">
+                    <div class="image w-100">
                         <img src="img/jj.png" alt="">
                     </div>
                     <div class="hover-items">
@@ -251,24 +255,28 @@
                     </div>
                 </div>
                 <div class="portfolio-item">
-                    <div class="image">
+                    <div class="image w-100">
                         <img src="img/r99.png" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3 class="text-primary"><a href="https://rattansangasanga.com">Rattan Sanga Sanga</a></h3>
+                        <h3>Rattan Sanga Sanga</h3>
                         <div style="padding: 0 10px;">
                             Rattan Sanga Sanga is a website for a rattan company aiming to showcase its various rattan products. It provides detailed product information, product galleries, an online catalog, and responsive customer service to facilitate customer information and purchases.
+                            <br>
+                            https://rattansangasanga.com
                         </div>
                     </div>
                 </div>
                 <div class="portfolio-item">
-                    <div class="image">
+                    <div class="image w-100">
                         <img src="img/saujana.png" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3 class="text-primary"><a href="https://saujana.id">Saujana</a></h3>
+                        <h3>Saujana</h3>
                         <div style="padding: 0 10px;">
                             Saujana is a promotional website dedicated to photography. It features portfolios of photographers showcasing various types of photography, including portraits, landscapes, and event documentation.
+                            <br>
+                            https://saujana.id
                         </div>
                     </div>
                 </div>
