--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     My ability is planning, compiling and maintenance in data processing. I was a honesty, hardworking, caring and clever 
                 </p>
                 <div class="btn-con">
-                    <a href="img/CV.pdf" download class="main-btn">
+                    <a href="img/CV-irfandyAziz.pdf" download class="main-btn">
                         <span class="btn-text">Download CV</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
