--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             <div class="">
                 <div class="">
                     <h4>Information About me</h4>
-                        <p>Hello, I'm Irfandy Aziz, a web developer and software engineer with diverse 3 years of experience in various technologies. I began my career journey after graduating from Vocational High School (SMK) majoring in Software Engineering (RPL) in 2021. Since then, I have been developing a wide range of skills in the software development field.</p>
-                        <br><br>
+                        <p>Hello, I'm Irfandy Aziz, a web developer and software engineer with 3 years of diverse experience in various technologies. I began my career journey after graduating from Vocational High School (SMK) majoring in Software Engineering (RPL) in 2021. Currently, I am pursuing a diploma in Management Informatics starting in 2023.</p>
+                        <br>
                         <p>I have extensive experience in programming languages and technologies, including:</p>
                         <br>
                         •  PHP, with specialized expertise in the Laravel and CodeIgniter 4 frameworks.
