--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="">
                 <div class="">
                     <h4>Information About me</h4>
-                        <p>Hello, I'm Irfandy Aziz, a web developer and software engineer with 2 years of diverse experience in various technologies. I graduated from Vocational High School (SMK) majoring in Software Engineering (RPL) in 2021 and am currently pursuing a diploma in Management Informatics, with two semesters remaining and a IPK of 3.</p>
+                        <p>Hello, I'm Irfandy Aziz, a web developer and software engineer with 2 years of diverse experience in various technologies. I graduated from Vocational High School (SMK) majoring in Software Engineering (RPL) in 2021. Currently, I am pursuing a diploma in Management Informatics and have completed two semesters with a current IPK of 3.</p>
                         <br>
                         <p>I have extensive experience in programming languages and technologies, including:</p>
                         <br>
