--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="">
                 <div class="">
                     <h4>Information About me</h4>
-                        <p>Hello, I'm Irfandy Aziz, a web developer and software engineer with 3 years of diverse experience in various technologies. I graduated from Vocational High School (SMK) majoring in Software Engineering (RPL) in 2021. Currently, I am pursuing a diploma in Management Informatics at Universitas Catur Insan Cendikia, and I have completed two semesters with a current IPK of 3.</p>
+                        <p>Hello, I'm Irfandy Aziz. I have skills as a web developer and software engineer with 3 years of experience. I started my career journey after graduating from a Vocational High School majoring in Software Engineering (RPL) in 2021. Then, I worked in an IT consultant and still work as an IT freelancer at Ritter Coding. Currently I am also studying at the University majoring in Information Management on the first year with GPA 3.</p>
                         <br>
                         <p>I have extensive experience in programming languages and technologies, including:</p>
                         <br>
@@ -277,6 +277,39 @@
                             Saujana is a promotional website dedicated to photography. It features portfolios of photographers showcasing various types of photography, including portraits, landscapes, and event documentation.
                             <br>
                             https://saujana.id
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <div class="image w-100">
+                        <img src="img/presence.png" alt="">
+                    </div>
+                    <div class="hover-items">
+                        <h3>Presence</h3>
+                        <div style="padding: 0 10px;">
+                            I have developed a attendance application for SMKN 1 Jamblang in Cirebon, focusing on student attendance recording and attendance summary to facilitate school management.
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <div class="image w-100">
+                        <img src="img/noimg.png" alt="">
+                    </div>
+                    <div class="hover-items">
+                        <h3>Koperasi</h3>
+                        <div style="padding: 0 10px;">
+                            I have developed an application for Al-Ikhlas Cooperative, specifically for savings and loan services. This application is designed to facilitate cooperative members in conducting savings and loan transactions, as well as monitoring their financial progress more efficiently.
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <div class="image w-100">
+                        <img src="img/payroll.png" alt="">
+                    </div>
+                    <div class="hover-items">
+                        <h3>Payroll</h3>
+                        <div style="padding: 0 10px;">
+                            Saya telah mengembangkan aplikasi payroll yang bertujuan untuk memudahkan perusahaan dalam proses penggajian karyawan. Aplikasi ini dirancang untuk mengotomatisasi dan menyederhanakan penghitungan gaji, pemrosesan penggajian secara akurat dan tepat waktu, serta memastikan kepatuhan terhadap peraturan perpajakan dan ketentuan ketenagakerjaan yang berlaku.
                         </div>
                     </div>
                 </div>
